--- a/web-angular/src/styles.scss
+++ b/web-angular/src/styles.scss
@@ -1,13 +1,22 @@
-@import '@angular/material/theming';
-@include mat-core();
+@use '@angular/material' as mat;
+@include mat.core();
 
-$custom-app-primary: mat-palette($mat-blue);
-$custom-app-secondary: mat-palette($mat-indigo, A200, A400, 700);
-$custom-app-warn: mat-palette($mat-red);
+$custom-color-primary: mat.define-palette(mat.$blue-palette);
+$custom-color-secondary: mat.define-palette(mat.$indigo-palette, A200, A400, 700);
+$custom-color-warn: mat.define-palette(mat.$red-palette);
 
-$custom-theme: mat-light-theme($custom-app-primary, $custom-app-secondary, $custom-app-warn);
+$custom-theme: mat.define-light-theme((
+  color: (
+    primary: $custom-color-primary,
+    accent: $custom-color-secondary,
+    warn: $custom-color-warn
+  ),
+  typography: mat.define-typography-config(),
+  density: 0
+));
 
-@include angular-material-theme($custom-theme);
+@include mat.core-theme($custom-theme);
+@include mat.all-component-themes($custom-theme);
 
 html,
 body {
