--- a/web-angular/src/app/courses/courses/courses.component.html
+++ b/web-angular/src/app/courses/courses/courses.component.html
@@ -18,13 +18,13 @@
         </ng-container>
 
         <ng-container matColumnDef="actions">
-          <mat-header-cell *matHeaderCellDef>
+          <th mat-header-cell *matHeaderCellDef>
             <button mat-mini-fab color="accent" aria-label="Add course" (click)="onAdd()">
               <mat-icon>add</mat-icon>
             </button>
-          </mat-header-cell>
+          </th>
 
-          <mat-cell *matCellDef="let course">
+          <td mat-cell *matCellDef="let course">
             <button mat-icon-button color="primary" aria-label="Edit course">
               <mat-icon>edit</mat-icon>
             </button>
@@ -32,7 +32,7 @@
             <button mat-icon-button color="warn" aria-label="Remove course">
               <mat-icon>delete</mat-icon>
             </button>
-          </mat-cell>
+          </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
