--- a/web-angular/src/app/courses/course-form/course-form.component.html
+++ b/web-angular/src/app/courses/course-form/course-form.component.html
@@ -1,1 +1,22 @@
-<p>course-form works!</p>
+<mat-card>
+  <mat-toolbar color="primary">Detalhes do curso</mat-toolbar>
+
+  <mat-card-content>
+    <form [formGroup]="form">
+      <mat-form-field appearance="outline">
+        <mat-label>Nome do curso</mat-label>
+        <input formControlName="name" matInput>
+      </mat-form-field>
+
+      <mat-form-field appearance="outline">
+        <mat-label>Categoria</mat-label>
+        <input formControlName="category" matInput>
+      </mat-form-field>
+    </form>
+  </mat-card-content>
+
+  <mat-card-actions>
+    <button mat-raised-button color="primary" (click)="onSubmit()">Salvar</button>
+    <button mat-raised-button (click)="onCancel()">Cancelar</button>
+  </mat-card-actions>
+</mat-card>
