--- a/web-angular/src/app/courses/course-form/course-form.component.html
+++ b/web-angular/src/app/courses/course-form/course-form.component.html
@@ -10,7 +10,11 @@
 
       <mat-form-field appearance="outline">
         <mat-label>Categoria</mat-label>
-        <input formControlName="category" matInput>
+        <mat-select formControlName="category">
+          <mat-option value="null"></mat-option>
+          <mat-option value="front-end">Front-end</mat-option>
+          <mat-option value="back-end">Back-end</mat-option>
+        </mat-select>
       </mat-form-field>
     </form>
   </mat-card-content>
