--- a/web-angular/src/app/courses/courses/courses.component.html
+++ b/web-angular/src/app/courses/courses/courses.component.html
@@ -2,48 +2,17 @@
   <mat-card-content>
     <mat-toolbar color="primary">Cursos disponíveis</mat-toolbar>
 
-    <div *ngIf="courses$ | async as courses; else loading">
-      <table mat-table [dataSource]="courses" class="mat-elevation-z8">
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef>Curso</th>
-          <td mat-cell *matCellDef="let course">{{ course.name }}</td>
-        </ng-container>
+    <div class="mat-elevation-z8 column-flex">
+      <app-courses-list
+        *ngIf="courses$ | async as courses; else loading"
+        [courses]="courses"
+      ></app-courses-list>
 
-        <ng-container matColumnDef="category">
-          <th mat-header-cell *matHeaderCellDef>Categoria</th>
-          <td mat-cell *matCellDef="let course">
-            {{ course.category }}
-            <mat-icon aria-hidden="false" aria-label="Categoria do curso">{{ course.category | category }}</mat-icon>
-          </td>
-        </ng-container>
-
-        <ng-container matColumnDef="actions">
-          <th mat-header-cell *matHeaderCellDef>
-            <button mat-mini-fab color="accent" aria-label="Add course" (click)="onAdd()">
-              <mat-icon>add</mat-icon>
-            </button>
-          </th>
-
-          <td mat-cell *matCellDef="let course">
-            <button mat-icon-button color="primary" aria-label="Edit course">
-              <mat-icon>edit</mat-icon>
-            </button>
-
-            <button mat-icon-button color="warn" aria-label="Remove course">
-              <mat-icon>delete</mat-icon>
-            </button>
-          </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
+      <ng-template #loading>
+        <div class="loading-spinner">
+          <mat-spinner></mat-spinner>
+        </div>
+      </ng-template>
     </div>
-
-    <ng-template #loading>
-      <div class="loading-spinner">
-        <mat-spinner></mat-spinner>
-      </div>
-    </ng-template>
   </mat-card-content>
 </mat-card>
