--- a/web-angular/src/app/courses/courses/courses.component.scss
+++ b/web-angular/src/app/courses/courses/courses.component.scss
@@ -1,5 +1,16 @@
+mat-card {
+  max-width: 80vw;
+  margin: 2em auto;
+  text-align: center;
+}
+
+.column-flex {
+  display: flex;
+  flex-direction: column;
+  min-width: 300px;
+}
+
 .loading-spinner {
-  background-color: rgba(0, 0, 0, 0.1);
   display: flex;
   align-items: center;
   justify-content: center;
