--- a/web-angular/src/app/courses/containers/course-form/course-form.component.html
+++ b/web-angular/src/app/courses/containers/course-form/course-form.component.html
@@ -5,7 +5,7 @@
     <form [formGroup]="form">
       <mat-form-field appearance="outline">
         <mat-label>Nome do curso</mat-label>
-        <input formControlName="name" matInput>
+        <input formControlName="name" matInput />
       </mat-form-field>
 
       <mat-form-field appearance="outline">
@@ -20,7 +20,9 @@
   </mat-card-content>
 
   <mat-card-actions>
-    <button mat-raised-button color="primary" (click)="onSubmit()">Salvar</button>
+    <button mat-raised-button color="primary" (click)="onSubmit()">
+      Salvar
+    </button>
     <button mat-raised-button (click)="onCancel()">Cancelar</button>
   </mat-card-actions>
 </mat-card>
